src/objects/Feature_Mapping__mdt.object
<CustomObject>
    <description>Maps CXO to Department Field Api Names for use in FeatureVoting.cmp</description>
    <fields>
        <fullName>Comments_Api__c</fullName>
        <label>Comments Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>used to determine what stage child records get created</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F1 - CTO</fullName>
                    <default>true</default>
                    <label>F1 - CTO</label>
                </value>
                <value>
                    <fullName>F2 - CXO</fullName>
                </value>
                <value>
                    <fullName>F3 - CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tempo_Api__c</fullName>
        <description>Tempo Api Name For use in Lightning:recordEditForm - FeatureVoting.cmp</description>
        <label>Tempo Api</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field Mapping</fullName>
                    <default>true</default>
                    <label>Field Mapping</label>
                </value>
                <value>
                    <fullName>Rally Input</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <description>Email used to compare who can send features from Rally</description>
        <label>UserEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>CXO User Id</description>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Api__c</fullName>
        <description>Value api name used in Lightning:recordEditForm - FeatureVoting.cmp</description>
        <label>Value Api</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAutoApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>determines if approval mapping will fall under autoapproval</description>
        <label>isAutoApproved</label>
        <type>Checkbox</type>
    </fields>
    <label>Feature Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>isAutoApproved__c</columns>
        <columns>UserId__c</columns>
        <columns>Tempo_Api__c</columns>
        <columns>Value_Api__c</columns>
        <columns>Comments_Api__c</columns>
        <columns>Type__c</columns>
        <columns>UserEmail__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Feature Mappings</pluralLabel>
</CustomObject>